# Numerical-Method

Projekt/: CMakeLists.txt  temat
Projekt/source/: calerf.cpp  calerf.h  decomposition_lu.hpp  equation_resolver.hpp  main.cpp  thomas_algorithm.hpp  vector_helper.hpp
zad1/: CMakeLists.txt  main.cpp
zad10/: CMakeLists.txt  main.cpp
zad2/: CMakeLists.txt  dane.txt  main.cpp
zad3/: CMakeLists.txt  main.cpp
zad4/: CMakeLists.txt  main.cpp
zad5/: CMakeLists.txt  main.cpp
zad6/: CMakeLists.txt  main.cpp
zad7/: CMakeLists.txt  main.cpp
zad8/: CMakeLists.txt  Typ_d.txt  Typ_f.txt  main.cpp
zad9/: CMakeLists.txt  main.cpp
